<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#202040">

    <!-- Usuario -->
    <EditText
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Usuario"
        android:textColor="#000000"
        android:textColorHint="#555555"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:background="@android:drawable/edit_text" />

    <!-- Contraseña -->
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Contraseña"
        android:textColor="#000000"
        android:textColorHint="#555555"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginTop="16dp" />

    <!-- Botón Login -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Iniciar Sesión"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FF9800"
        android:textColor="#FFFFFF" />

    <!-- Link a registro -->
    <TextView
        android:id="@+id/linkRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿No tienes cuenta? Regístrate"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"/>
</LinearLayout>
